--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 </style>
     </head>
 <body>
-</span>
+  
 <ul class="nav justify-content-end" id="nav">
   <li class="nav-item">
-    <a class="nav-link" href="#" id="top">Images</a>
+    <a class="nav-link" href="Image.html" id="top">Images</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Advanced</a>
+    <a class="nav-link" href="Image.html">Advanced</a>
   </li>
 </ul>
 
