--- a/Image.html
+++ b/Image.html
@@ -1,80 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <link rel="icon" type="image/x-icon" href="https://www.gstatic.com/images/branding/searchlogo/ico/favicon.ico">
-        <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+        <link rel="stylesheet" href="styles2.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
+        <title>Google</title>
+        <style>
+          .material-symbols-outlined {
+            font-variation-settings:
+            'FILL' 0,
+            'wght' 400,
+            'GRAD' 0,
+            'opsz' 24
+          }
+</style>
+    </head>
 <body>
-<div class="card text-center">
-  <div class="card-header">
-    <nav class="navbar">
-        <a class="navbar-brand" href="">Advanced</a>
-        <a class="navbar-brand" href="Image.html">Images</a>
-    </nav>
-  </div>
-<div class="card-body">
-   <div class="container-fluid">
-        <img src="Google_logo.png" class="responsive">     
-        <form action="https://google.com/search">
-            <button type="submit" class="btn btn-outline-primary" name="q">Primary</button>
-            <button type="button" class="btn btn-outline-secondary">Secondary</button>
-            <input class="form-control" type="text" name="q">
-            <input value="Search"type="submit" name="q">
-        </form>
-        
-<div class="container text-center">
-  <div class="row row-cols-auto justify-content-center">
-   <div class="col">
-        <form action="https://doodles.google/">
-            <input type="submit" value="Google Search" class="btn">
-        </form>                
-    </div>
-    <div class="col">
-        <form action="https://google.com/search">
-            <input type="submit" value="I'm feeling lucky" class="btn" name="q">
-        </form>
-    </div>
-  </div>
-</div>
-</div>
-  <div class="card-footer text-body-secondary">
-    2 days ago
-  </div>
-</div>
-    
-<section>
 
+<section>
+<div class="container-fluid">
+  <div class="search">
+  <i class="fas fa-search"></i>
+</div>
+        <img src="Google_Images_2015_logo.svg.png" class="responsive"> 
+        <form method="get" action="https://google.com/images">
+          <div class="search-container">
+             <span class="material-symbols-outlined">search</span>
+                <input class="form-control" type="text" name="q">
+            </div>
+            <div class="pos">
+            <input type="submit" class="btn" value="Google Search">
+            </div>
+          </div>
+        </form>
 </section>
 
 
-
-
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar w/ text</a>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-      </ul>
-      <span class="navbar-text">
-        Navbar text with an inline element
-      </span>
-    </div>
+<div class="footer">
+  <div class="card-body">
+    <p class="card-text">Philippines</p>
   </div>
-</nav>
 
+  <div class="d-flex flex-column flex-md-row justify-content-between px-2" style="background-color: rgb(243, 241, 241)">
+    <ul class="nav justify-content-center" id="bottom-nav">
+      <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Advertising</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Business</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">How Search Works</a></li>
+    </ul>
 
+    <ul class="nav justify-content-center" id="bottom-nav">
+      <li class="nav-item"><a class="nav-link" href="#">Privacy</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Terms</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Settings</a></li>
+
+  </div>
+</div>
 </body>
 </html>
